--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/elliptic": "^6.4.18",
     "@types/express": "^4.17.21",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "elliptic": "^6.5.7",
     "express": "^4.19.2",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
